reduce member card size, fix showing member details on click on mobile

--- a/codebase/static/css/memberList.css
+++ b/codebase/static/css/memberList.css
@@ -58,5 +58,26 @@
  
   .member {
     margin: 10px;
+    width: 120px;
+    height: 120px;
+  }
+
+  .member-details {
+    width: 120px;
+    height: 120px;
+  }
+
+  .member:hover > .member-details {
+    visibility: visible;
+    opacity: 1;
+    width: 120px;
+    height: 120px;
+  }
+
+  .member:focus > .member-details {
+    visibility: visible;
+    opacity: 1;
+    width: 120px;
+    height: 120px;
   }
 }
